# concordium-governance-committee-voting

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .prettierrc  Cargo.toml  README.md  docker-compose.yml  env.election.example  package.json
.github/workflows/: check-apps.yml  check-crates.yaml  check.yml  release-coordinator.yml  release-guardian-app.yaml  release-guardian.yaml  release-indexer.yaml  release-server.yaml
apps/: .editorconfig  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  package.json  tsconfig.json
apps/.yarn/patches/: @concordium-wallet-connectors-npm-0.6.0-alpha.6-ecfa0628c7.patch
apps/ccd-bootstrap/: package.json
apps/ccd-bootstrap/scss/: _theme.scss  _util.scss  index.scss
apps/ccd-bootstrap/scss/config/: _colors.scss
apps/ccd-bootstrap/scss/theme/: _btn.scss  _root.scss
apps/electionguard-bindings/: Cargo.toml  README.md  package.json
apps/electionguard-bindings/src/: lib.rs
apps/guardian/: .gitignore  CHANGELOG.md  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/guardian/scripts/: generate-tauri-config.ts  sign-windows-fp.bat  sign-windows.js  sign.sh
apps/guardian/src/: main.tsx
apps/guardian/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
apps/guardian/src-tauri/icons/: icon.icns
apps/guardian/src-tauri/resources/: default_config.toml
apps/guardian/src-tauri/src/: commands.rs  config.rs  main.rs  shared.rs  state.rs  user_config.rs
apps/guardian/src/layouts/: _bundle.scss
apps/guardian/src/layouts/Main/: Main.tsx  _Main.scss
apps/guardian/src/pages/: _bundle.scss
apps/guardian/src/pages/Actions/: Actions.tsx  DecryptionActions.tsx  SetupActions.tsx  _Actions.scss  util.tsx
apps/guardian/src/pages/Home/: Home.tsx  _Home.scss
apps/guardian/src/pages/ImportWalletAccount/: ImportWalletAccount.tsx  _ImportWalletAccount.scss  index.ts
apps/guardian/src/pages/SelectAccount/: SelectAccount.tsx  _SelectAccount.scss  index.ts
apps/guardian/src/pages/Setup/: Setup.tsx  _Setup.scss
apps/guardian/src/scss/: _components.scss  index.scss
apps/guardian/src/scss/layout/: _root.scss
apps/guardian/src/shared/: _bundle.scss  constants.ts  election-contract.ts  ffi.ts  store.ts
apps/guardian/src/shared/Button/: Button.tsx  _Button.scss
apps/guardian/src/shared/FileInput/: FileInput.tsx  _FileInput.scss
apps/guardian/src/shell/: Root.tsx  _bundle.scss  router.tsx
apps/guardian/src/shell/App/: App.tsx  _App.scss
apps/guardian/types/: global.d.ts
apps/shared/: package.json  tsconfig.json
apps/shared/__generated__/election-contract/: election_schema.json  module.ts  module_election.ts
apps/shared/scripts/: generate-election-contract-client.ts
apps/shared/src/: components.tsx  election-contract.ts  routing.ts  types.ts  util.ts
apps/shared/src/election-contract/: election-contract.ts  index.ts  worker.ts
apps/voting/: .eslintcache  .gitignore  CHANGELOG.md  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/voting/scripts/: generate-election-contract-client.ts
apps/voting/src/: Root.tsx  main.tsx
apps/voting/src/__generated__/election-contract/: election_schema.json  module.ts  module_election.ts
apps/voting/src/pages/: Delegation.tsx
apps/voting/src/pages/Delegation/: Delegation.tsx  _Delegation.scss  index.ts
apps/voting/src/pages/Home/: Home.tsx  _Home.scss
apps/voting/src/scss/: _bootstrap-config.scss  _components.scss  _layout.scss  index.scss
apps/voting/src/scss/layout/: _btn.scss  _root.scss
apps/voting/src/shared/: connection.ts  connection.tsx  constants.ts  election-contract.ts  election-contract.tsx  election-guard.ts  election-server.ts  hooks.ts  store.ts  util.ts  wallet-connection.tsx
apps/voting/src/shared/election-guard/: api.ts  worker.ts
apps/voting/src/shell/: App.tsx  Root.tsx  router.tsx
apps/voting/src/shell/App/: App.tsx  WalletConnection.tsx  _App.scss
apps/voting/types/: env.d.ts  global.d.ts  vite-plugin-handlebars.d.ts  vite-plugin-wasm.d.ts
contracts/: .gitignore
contracts/concordium-governance-committee-election/: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
contracts/concordium-governance-committee-election/deploy-scripts/: Cargo.toml
contracts/concordium-governance-committee-election/deploy-scripts/src/: main.rs
contracts/concordium-governance-committee-election/src/: lib.rs
contracts/concordium-governance-committee-election/tests/: tests.rs
coordinator-tool/: CHANGELOG.md  Cargo.toml  README.md  final-weights.csv  initial-weights.csv
coordinator-tools/: Cargo.toml  README.md
docs/: running-an-election.md  verify-election-result.md
election-common/: Cargo.toml
election-common/src/: contract.rs  lib.rs
election-server/: CHANGELOG.md  Cargo.toml  README.md
election-server/resources/: schema.sql
election-server/src/: db.rs  main.rs  types.rs  util.rs
resources/config-example/: checksums.txt  election-manifest.json  election-parameters.json  eligible-voters.json  guardian-public-keys.json  initial-weights.csv
resources/config-example/candidates/: checksums.txt
resources/eg-config-example/: election-parameters.json
resources/guardians/: g1.pub.json  g2.pub.json  g3.pub.json  g4.pub.json  g5.pub.json
resources/manifests/: simple-manifest.json
scripts/: dapp-gc-voting.Dockerfile  indexer.Dockerfile
test-scripts/: CHANGELOG.md  Cargo.toml  README.md  flake.nix
test-scripts/src/: main.rs
