[workspace]
resolver = "2"
members = [
    "apps/guardian/src-tauri",
    "apps/electionguard-bindings",
    "contracts/concordium-governance-committee-election",
    "coordinator-tool",
    "election-common",
    "election-server",
    "test-scripts",
]

# Define common dependencies with versions to be used by workspace members
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
sha2 = "0.10"
concordium-rust-sdk = "6.0"
tokio = { version = "1.35", features = ["rt-multi-thread"] }
tonic = { version = "0.10", features = ["tls-roots"] }
futures = "0.3"
csv = "1.3"
clap = { version = "4.4", features = ["env", "derive"] }
rand = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
indicatif = "0.17"
itertools = "0.12"
serde_cbor = "0.11"
url = "2.5"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
strum = { version = "0.26", features = ["derive"] }

# Internal crates that are referenced by other workspace members
[workspace.dependencies.concordium_governance_committee_election]
path = "contracts/concordium-governance-committee-election"
features = ["serde"]

[workspace.dependencies.eg]
path = "deps/electionguard-rust/src/eg"

[workspace.dependencies.util]
path = "deps/electionguard-rust/src/util"

[workspace.dependencies.election-common]
path = "election-common"

[profile.release.package.concordium_governance_committee_election]
opt-level = "s"
codegen-units = 1

[profile.release.package.electionguard-bindings]
opt-level = "s"
