[package]
name = "coordinator-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.31"
clap = { version = "4.4", features = ["env", "derive"] }
concordium-rust-sdk = { path = "../deps/concordium-rust-smart-contracts/concordium-rust-sdk/", version = "4" } # TODO: Use published version once new version is published.
concordium_governance_committee_election = { version = "0.1.0", path = "../contracts/concordium-governance-committee-election" }
csv = "1.3"
eg = { version = "0.1", path = "../deps/electionguard-rust/src/eg" }
futures = "0.3"
indicatif = "0.17"
reqwest = { version = "0.11.23", features = ["json"] }
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync"] }
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
