[package]
name = "coordinator-tool"
version = "0.2.3"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["env", "derive"] }
concordium-rust-sdk = { path = "../deps/concordium-rust-smart-contracts/concordium-rust-sdk/" }
concordium_governance_committee_election = { path = "../contracts/concordium-governance-committee-election" }
csv = "1.3"
dialoguer = { version = "0.11", default-features = false }
eg = { version = "0.1", path = "../deps/electionguard-rust/src/eg" }
election-common = { version = "*", path = "../election-common" }
futures = "0.3"
indicatif = "0.17"
# We use rusttls to avoid depending on openssl on linux. This simplifies installation for users.
reqwest = { version = "0.11", default-features=false, features = ["rustls-tls-webpki-roots", "gzip", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync"] }
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
url = "2.5"
util = { version = "0.1.0", path = "../deps/electionguard-rust/src/util" }
