[package]
name = "coordinator-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["env", "derive"] }
concordium-rust-sdk = { git = "https://github.com/Concordium/concordium-rust-sdk.git", branch = "additional-indexer", version = "3.2.0" } # TODO: Use published version once new version is published.
csv = "1.3.0"
futures = "0.3.30"
indicatif = "0.17"
serde = { version = "1.0.194", features = ["derive"] }
serde_cbor = "0.11.2"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "sync"] }
tonic = { version = "0.8", features = ["tls", "tls-roots"] }
