[package]
name = "election-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium_base = { version = "4.0" }
eg = { version = "*", path = "../deps/electionguard-rust/src/eg" }
rmp-serde = "1.1"
serde = "1.0"
