[package]
name = "election-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
concordium_base = { version = "4.0" }
concordium_governance_committee_election = { version = "*", path = "../contracts/concordium-governance-committee-election" }
eg = { version = "*", path = "../deps/electionguard-rust/src/eg" }
reqwest = "0.12"
rmp-serde = "1.1"
serde = "1.0"
sha2 = "0.10"
