[package]
name = "election-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
concordium_governance_committee_election = { workspace = true }
eg = { workspace = true }
reqwest = { workspace = true, optional = true}
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

concordium_base = "7.0"
rmp-serde = "1.1"

[features]
http = ["dep:reqwest"]
