[package]
name = "election-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"]}
axum-prometheus = "0.5"
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "env"] }
concordium-rust-sdk = "3.2"
concordium_governance_committee_election = { version = "*", path = "../contracts/concordium-governance-committee-election", features = ["serde"] }
deadpool-postgres = "0.11"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.34", features = ["rt-multi-thread", "signal"]}
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"]}
tonic = {version = "0.10", features = ["tls", "tls-roots"]} # Use system trust roots.
tower-http = {version = "0.5", features = [
  "trace",
  "limit",
  "cors",
  "timeout",
  "fs",
  "compression-br",
  "compression-zstd",
]}
tracing = "0.1"
tracing-subscriber = "0.3"
