[package]
name = "election-server"
version = "1.0.1"
authors = ["Concordium software <support@concordium.software>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
concordium-rust-sdk = { workspace = true }
concordium_governance_committee_election = { workspace = true }
eg = { workspace = true }
election-common = { workspace = true, features = ["async"] }
futures = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tonic = { workspace = true }

axum = { version = "0.7", features = ["macros"] }
axum-prometheus = "0.5"
deadpool-postgres = "0.11"
handlebars = "4.5"
tokio-postgres = { version = "0.7", features = [
  "with-serde_json-1",
  "with-chrono-0_4",
] }
tower-http = { version = "0.5", features = [
  "trace",
  "limit",
  "cors",
  "timeout",
  "fs",
  "compression-br",
  "compression-zstd",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
