[package]
name = "election-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["env", "derive"] }
concordium-rust-sdk = { path = "../deps/concordium-rust-smart-contracts/concordium-rust-sdk/" }
concordium_governance_committee_election = { path = "../contracts/concordium-governance-committee-election" }
csv = "1.3"
eg = { path = "../deps/electionguard-rust/src/eg" }
election-common = { version = "*", path = "../election-common" }
futures = "0.3"
indicatif = "0.17"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync"] }
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
url = "2.5"
util = { path = "../deps/electionguard-rust/src/util" }
uuid = { version = "1.6", features = ["v4"] }
