[package]
name = "election-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
concordium_governance_committee_election = { workspace = true }
concordium-rust-sdk = { workspace = true }
csv = { workspace = true }
eg = { workspace = true }
election-common = { workspace = true, features = ["async"] }
futures = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"]}
tonic = { workspace = true }
url = { workspace = true }
util = { workspace = true }

uuid = { version = "1.6", features = ["v4"] }
