[package]
name = "electionguard-bindings"
version = "0.1.0"
authors = ["Concordium software <support@concordium.software>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1", optional = true }
eg = { version = "*", path = "../../deps/electionguard-rust/src/eg" }
util = { version = "*", path = "../../deps/electionguard-rust/src/util" }
getrandom = { version = "0.2", features = ["js"] } # This is only required to enable js feature in "eg"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify = "0.4"
rand = "0.8"
rmp-serde = "1.1"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
