# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "concordium_governance_committee_election"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Concordium software <support@concordium.software>"]
description = "A smart contract for facilitating Concordium goverance committee elections."

[features]
default = ["std"]
std = ["concordium-std/std"]
bump_alloc = ["concordium-std/bump_alloc"]
serde = ["dep:serde"]

[dependencies]
concordium-std = { path = "../../deps/concordium-rust-smart-contracts/concordium-std", version = "10.0", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
concordium-smart-contract-testing = {path = "../../deps/concordium-rust-smart-contracts/contract-testing/", version = "4"}
chrono = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
