[package]
name = "guardian"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
concordium-rust-sdk = { workspace = true }
serde = { workspace = true }
tauri-build = { version = "1.5", features = [] }
toml_edit = { version = "0.22", features = ["serde"] }

[dependencies]
anyhow = { workspace = true }
concordium_governance_committee_election = { workspace = true }
concordium-rust-sdk = { workspace = true }
eg = { workspace = true }
election-common = { workspace = true, features = ["http"] }
itertools = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
tonic = { workspace = true }
util = { workspace = true }
rand = { workspace = true }

tauri = { version = "1.5", features = [
  "fs-read-dir",
  "fs-exists",
  "fs-write-file",
  "fs-read-file",
  "shell-open",
  "cli",
] }
toml_edit = { version = "0.22", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
