[package]
name = "guardian"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = { workspace = true }
concordium_governance_committee_election = { workspace = true }
concordium-rust-sdk = { workspace = true }
eg = { workspace = true }
election-common = { workspace = true, features = ["async"] }
itertools = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
tonic = { workspace = true }
util = { workspace = true }
rand = { workspace = true }

tauri = { version = "1.5", features = [
  "fs-read-dir",
  "fs-exists",
  "fs-write-file",
  "fs-read-file",
  "shell-open",
  "cli",
] }
toml_edit = { version = "0.22", features = ["serde"] }
open = "5.3"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4"
log-print-panics = "2.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
