[package]
name = "guardian"
version = "2.0.1"
description = "Guardian app for the Concordium blockchain elections"
authors = ["concordium"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = { workspace = true }
concordium_governance_committee_election = { workspace = true }
concordium-rust-sdk = { workspace = true }
eg = { workspace = true }
election-common = { workspace = true, features = ["async"] }
itertools = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
tonic = { workspace = true }
util = { workspace = true }
rand = { workspace = true }

tauri = { version = "1.6", features = [
  "fs-read-dir",
  "fs-exists",
  "fs-write-file",
  "fs-read-file",
  "shell-open",
  "cli",
] }
toml_edit = { version = "0.22", features = ["serde"] }
open = "5.3"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", rev = "3b8e56a4d9002a8fa30fcd182bebfb447a0b9c41" }
log = "0.4"
log-panics = "2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
